# era-test-node

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  SUPPORTED_APIS.md  docker-compose.yml  errors-era-test-node.json  root.json  rust-toolchain.toml  rust-toolchain.yaml  test_endpoints.http
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_report.md
.github/workflows/: build-push-docker.yml  check-pr-title.yml  checks.yaml  docs.yaml  e2e-rust.yml  e2e.yml  release.yml  secret_scanner.yaml  spec.yml  tests.yaml
data/: abi_map.json  address_map.json
docs/: release.md
docs/rustbook/: book.toml
docs/rustbook/src/: SUMMARY.md  installation.md  introduction.md
docs/rustbook/src/misc/: contributors.md
docs/rustbook/src/usage/: README.md  basic.md  bootloader.md  deploy-contracts.md  fork.md  remote-tx.md  testing.md
e2e-tests/: .eslintrc.js  .gitignore  .prettierrc  README.md  hardhat.config.ts  package.json  tsconfig.json
e2e-tests-rust/: Cargo.toml
e2e-tests-rust/src/: ext.rs  lib.rs  utils.rs
e2e-tests-rust/src/provider/: anvil_zksync.rs  mod.rs  testing.rs
e2e-tests-rust/tests/: lib.rs
e2e-tests/contracts/: ERC20.sol  ERC20FixedPaymaster.sol  ERC721.sol  ERC721GatedPaymaster.sol  Fib.sol  Greeter.sol  Primary.sol  Return5.sol  Secondary.sol  TestCheatcodes.sol
e2e-tests/helpers/: constants.ts  utils.ts
e2e-tests/test/: anvil-apis.test.ts  cheatcodes.test.ts  debug-apis.test.ts  erc20-fixed-paymaster.test.ts  erc721-gated-paymaster.test.ts  eth-apis.test.ts  evm-apis.test.ts  fib.test.ts  hardhat-apis.test.ts  main.test.ts  web3-apis.test.ts  zks-apis.test.ts
etc/system-contracts/: SystemConfig.json  VERSION.md  hardhat.config.ts  package.json
etc/system-contracts/bootloader/: bootloader.yul
etc/system-contracts/bootloader/test_infra/: Cargo.toml
etc/system-contracts/bootloader/test_infra/src/: main.rs
etc/system-contracts/contracts/: BootloaderUtilities.sol  Console.sol  Constants.sol  ContractDeployer.sol  DefaultAccount.sol  DefaultAccountNoSecurity.sol  EventWriter.yul  EvmConstants.sol  EvmGasManager.sol  EvmInterpreter.sol
etc/system-contracts/contracts/interfaces/: IAccount.sol  IContractDeployer.sol
etc/system-contracts/contracts/libraries/: TransactionHelper.sol
etc/system-contracts/contracts/precompiles/: Console.yul  EcAdd.yul  EcMul.yul  EcPairing.yul  Ecrecover.yul  Keccak256.yul  ModExp.yul  Playground.yul  SHA256.yul
etc/system-contracts/scripts/: compile-yul.ts  constants.ts  preprocess-bootloader.ts  process.ts  utils.ts
etc/test-contracts/: .gitignore  hardhat.config.ts  package.json
etc/test-contracts/contracts/cheatcodes/: TestCheatcodes.sol
etc/test-contracts/contracts/tracing/: Primary.sol  Secondary.sol
example_override/: 0x8340BF5CE80Ba4ED8C3A18E03567C40d04B05358.json  README.md
examples/: config.toml
interop/src/: Bridgehub.sol  Counter.sol  NFT.sol
scripts/: execute-e2e-tests.sh  install.sh  refresh_abi_map.py  refresh_contracts.sh  refresh_precompiles.sh  refresh_test_contracts.sh
spec-tests/: Cargo.toml
spec-tests/src/: api.rs  lib.rs  patch.rs  process.rs  utils.rs
spec-tests/tests/: lib.rs
src/: bootloader_debug.rs  bytecode_override.rs  cache.rs  cheatcodes.rs  configuration_api.rs  console_log.rs  constants.rs  debug.rs  evm.rs  filters.rs  fork.rs  formatter.rs  formatter2.rs  hardhat.rs  http_fork_source.rs  lib.rs  logging_middleware.rs  main.rs  net.rs  node.rs  observability.rs  resolver.rs  system_contracts.rs  testing.rs  utils.rs  zks.rs
src/config/: cache.rs  cli.rs  constants.rs  mod.rs  show_details.rs
src/data/: abi_map.json  address_map.json
src/namespaces/: anvil.rs  config.rs  debug.rs  eth.rs  eth_test.rs  evm.rs  hardhat.rs  mod.rs  net.rs  web3.rs  zks.rs
src/node/: anvil.rs  block_producer.rs  call_error_tracer.rs  config.rs  config_api.rs  debug.rs  error.rs  eth.rs  evm.rs  fee_model.rs  hardhat.rs  impersonate.rs  in_memory.rs  in_memory_ext.rs  interop.rs  mod.rs  net.rs  pool.rs  sealer.rs  state.rs  storage_logs.rs  time.rs  web3.rs  zks.rs
