[package]
name = "anvil-zksync"
version = "0.2.1"
edition = "2018"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/anvil-zksync"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
publish = false                                            # We don't want to publish our binaries.

[dependencies]
zksync_multivm = { git = "https://github.com/matter-labs/zksync-era.git", rev = "6c034f6e180cc92e99766f14c8840c90efa56cec" }
zksync_contracts = { git = "https://github.com/matter-labs/zksync-era.git", rev = "6c034f6e180cc92e99766f14c8840c90efa56cec" }
zksync_types = { git = "https://github.com/matter-labs/zksync-era.git", rev = "6c034f6e180cc92e99766f14c8840c90efa56cec" }
zksync_utils = { git = "https://github.com/matter-labs/zksync-era.git", rev = "6c034f6e180cc92e99766f14c8840c90efa56cec" }
zksync_web3_decl = { git = "https://github.com/matter-labs/zksync-era.git", rev = "6c034f6e180cc92e99766f14c8840c90efa56cec", features = [
    "server",
] }

# alloy
alloy-signer-local = { version = "0.5.4", features = ["mnemonic"] }
alloy-signer = { version = "0.5.4", default-features = false }

openssl-sys = { version = "0.9", features = ["vendored"] }

anyhow = "1.0"
tokio = { version = "1", features = ["time", "rt"] }
futures = { version = "0.3", features = ["compat"] }
once_cell = "1.7"

jsonrpc-http-server = { git = "https://github.com/matter-labs/jsonrpc.git", branch = "master" }
jsonrpc-core = { git = "https://github.com/matter-labs/jsonrpc.git", branch = "master" }
jsonrpc-core-client = { git = "https://github.com/matter-labs/jsonrpc.git", branch = "master" }
jsonrpc-derive = { git = "https://github.com/matter-labs/jsonrpc.git", branch = "master" }

clap = { version = "4.2.4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1.26", features = ["log"] }
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "time",
    "json",
    "local-time",
] }
colored = "2.0"
lazy_static = "1.4"
eyre = "0.6"
serde_json = "1.0.67"
bigdecimal = { version = "0.3.0", features = ["serde"] }
hex = "0.4"
ethabi = "16.0.0"
itertools = "0.10.5"
rustc-hash = "1.1.0"
indexmap = "2.0.1"
chrono = { version = "0.4.31", default-features = false }
time = "0.3.36"
rand = "0.8"
flate2 = "1.0"
thiserror = "1"

[dev-dependencies]
httptest = "0.15.4"
tempdir = "0.3.7"
maplit = "1.0.2"
zksync-web3-rs = "0.1.1"
ethers = { version = "2.0.4", features = ["rustls"] }
jsonschema = "0.26.0"
schemars = "0.8.21"
openrpc-types = "0.4.0"
alloy = { version = "0.5", features = ["full"] }
test-log = "0.2.16"
fs2 = "0.4.3"
test-case = "3.3.1"

[profile.dev]
debug = 0
