[package]
name = "era_test_node_spec_tests"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-test-node"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
publish = false

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["time", "rt", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.26.0"
schemars = "0.8.21"
openrpc-types = "0.4.0"
alloy = { version = "0.5", features = ["full"] }
fs2 = "0.4.3"
reqwest = { version = "0.12", features = ["blocking"] }
itertools = "0.13"
tracing = "0.1"
chrono = "0.4"

zksync_basic_types = { git = "https://github.com/matter-labs/zksync-era.git", rev = "ad5d42e0c7b50068ff0fd501c2b2ee549410adf8" }

[dev-dependencies]
test-log = "0.2.16"

[workspace] # ignore higher-level workspace
